--- a/SceneGraph/SceneGraph.csproj
+++ b/SceneGraph/SceneGraph.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="StereoKit" Version="0.3.7-preview.9" />
+  </ItemGroup>
+
 </Project>
