--- a/LauncherMultiPlatform/LauncherMultiPlatform.csproj
+++ b/LauncherMultiPlatform/LauncherMultiPlatform.csproj
@@ -4,18 +4,18 @@
 		<TargetFrameworks>net7.0;net7.0-android</TargetFrameworks>
 		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net7.0-windows10.0.19041.0</TargetFrameworks>
 		<OutputType>Exe</OutputType>
-		<RootNamespace>LauncherCrossPlatform</RootNamespace>
+		<RootNamespace>LauncherMultiPlatform</RootNamespace>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>disable</ImplicitUsings>
 		<WindowsPackageType>None</WindowsPackageType>
 
 		<!-- Display name -->
-		<ApplicationTitle>LauncherCrossPlatform</ApplicationTitle>
+		<ApplicationTitle>LauncherMultiPlatform</ApplicationTitle>
 		
 		<!-- App Identifier -->
-		<ApplicationId>com.companyname.LauncherCrossPlatform</ApplicationId>
-		<ApplicationIdGuid>8EB2F300-2EE1-4EF5-B0FD-B558E80C32D5</ApplicationIdGuid>
+		<ApplicationId>com.companyname.LauncherMultiPlatform</ApplicationId>
+		<ApplicationIdGuid>39D4C612-1A70-4856-ACFC-A4053E095C25</ApplicationIdGuid>
 
 		<!-- Versions -->
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
