--- a/Framework/Framework.csproj
+++ b/Framework/Framework.csproj
@@ -7,11 +7,21 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Assets\**" />
+	  <EmbeddedResource Remove="Assets\**" />
+	  <None Remove="Assets\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="StereoKit" Version="0.3.7-preview.9" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<Folder Include="Assets\" />
+	  <SKShader Remove="Assets\**" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <UpToDateCheckInput Remove="Assets\**" />
 	</ItemGroup>
 
 </Project>
