--- a/Launchers/Launcher.Maui/Launcher.Maui.csproj
+++ b/Launchers/Launcher.Maui/Launcher.Maui.csproj
@@ -1,21 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net7.0;net7.0-android33.0</TargetFrameworks>
+		<TargetFrameworks>net7.0;net7.0-android</TargetFrameworks>
 		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net7.0-windows10.0.19041.0</TargetFrameworks>
 		<OutputType>Exe</OutputType>
-		<RootNamespace>LauncherMultiPlatform</RootNamespace>
+		<RootNamespace>Launcher.Maui</RootNamespace>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>disable</ImplicitUsings>
 		<WindowsPackageType>None</WindowsPackageType>
 
 		<!-- Display name -->
-		<ApplicationTitle>LauncherMultiPlatform</ApplicationTitle>
-
+		<ApplicationTitle>Launcher.Maui</ApplicationTitle>
+		
 		<!-- App Identifier -->
-		<ApplicationId>com.companyname.LauncherMultiPlatform</ApplicationId>
-		<ApplicationIdGuid>39D4C612-1A70-4856-ACFC-A4053E095C25</ApplicationIdGuid>
+		<ApplicationId>com.companyname.Launcher.Maui</ApplicationId>
+		<ApplicationIdGuid>3F000759-6996-4F0B-992B-C9F38C13DAAC</ApplicationIdGuid>
 
 		<!-- Versions -->
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
@@ -33,7 +33,7 @@
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#000000" />
 
 		<!-- Images -->
-		<MauiImage Include="Resources\Images\*" />
+		<MauiImage Include="Resources\Images\*" /> 
 
 	</ItemGroup>
 
@@ -42,7 +42,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\Nazar\Nazar.csproj" />
+	  <ProjectReference Include="..\..\Nazar\Nazar.csproj" />
 	</ItemGroup>
 
 </Project>
