--- a/MessagingHub/PubSubHub.UnitTests/PubSubHub.UnitTests.csproj
+++ b/MessagingHub/PubSubHub.UnitTests/PubSubHub.UnitTests.csproj
@@ -15,5 +15,9 @@
 		<PackageReference Include="coverlet.collector" Version="3.1.2" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Framework\Framework.csproj" />
+	</ItemGroup>
+
 
 </Project>
