Added netcore launcher project

--- a/Framework/Framework/Framework.csproj
+++ b/Framework/Framework/Framework.csproj
@@ -24,4 +24,8 @@
 	  <UpToDateCheckInput Remove="Assets\**" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Agent\" />
+	</ItemGroup>
+
 </Project>
